--- a/JEE6/FacesTest/WebContent/admin/address.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/address.xhtml
@@ -42,7 +42,7 @@
 					<tr>		
 						<td></td>
 						<td>
-							<h:commandButton value="#{msg.change}" action="#{adminHandler.change()}" />
+							<h:commandButton value="#{msg.change}" action="#{adminHandler.saveAddress()}" />
 							<h:commandButton value="#{msg.back}" action="index.xhtml" />
 						</td>
 					</tr>
