--- a/JEE6/MinimalWebApplication/WebContent/index.xhtml
+++ b/JEE6/MinimalWebApplication/WebContent/index.xhtml
@@ -10,6 +10,7 @@
 		<title>Minimale JEE6-Applikation</title>
 	</head>
 	<body>
+	<ui:debug/>
 	<h2>Minimale JEE6-Applikation</h2>
 	<p>
 		#{minimalHandler.exampleText}
