--- a/JEE6/FacesTest/WebContent/admin/index.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/index.xhtml
@@ -11,8 +11,12 @@
 	<ui:define name="content">
 		<h:messages layout="table" styleClass="error" />
 		<div class="box">
-			<h:form id="user">
+			<h:form id="user" method="post" enctype="multipart/form-data" acceptcharset="UTF-8">
 				<table>
+					<tr>
+						<td/>
+						<td><h:graphicImage width="64" height="64" value="/avatar"/></td>
+					</tr>
 					<tr>
 						<td class="mid">#{msg['admin.userinfo.name']}</td>
 						<td><h:inputText id="name" value="#{sessionInfo.user.name}" /></td>
@@ -37,7 +41,7 @@
 					</tr>
 					<tr>
 						<td class="mid">#{msg['admin.userinfo.image']}</td>
-						<td><input type="file" accept="image/jpeg"/></td>
+						<td><input id="user:image" type="file" name="image" accept="image/jpeg"/></td>
 					</tr>
 					<tr>
 						<td class="mid">#{msg['admin.userinfo.changed']}</td>
@@ -51,7 +55,7 @@
 						<td/>
 						<td>
 							<h:commandButton value="#{msg.change}" action="#{userHandler.change()}" />
-							<h:commandButton value="#{msg.back}" action="/index.xhtml" />
+							<h:commandButton value="#{msg.back}"   action="/index.xhtml" />
 							<h:commandButton value="#{msg.export}" action="#{userHandler.export()}" />
 						</td>
 					</tr>
