--- a/JEE6/FacesTest/WebContent/index.xhtml
+++ b/JEE6/FacesTest/WebContent/index.xhtml
@@ -1,20 +1,17 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<div
 		xmlns:ui="http://java.sun.com/jsf/facelets"      
 		xmlns:f="http://java.sun.com/jsf/core"      
 		xmlns:h="http://java.sun.com/jsf/html">
 
-<ui:composition template="/layout.xhtml">
-	<ui:define name="title">#{msg['start.title']}</ui:define>
-	<ui:define name="content">
-		<ul>
-			<li><h:link value="#{msg.change}" outcome="/admin/index.xhtml" /></li>
-			<li><h:link value="#{msg.logout}" outcome="/logout.xhtml" /></li>
-			<li><h:link value="#{msg['image.title']}" outcome="/image.xhtml" /></li>
-			<li><h:link value="#{msg['greece.title']}" outcome="/greece.xhtml" /></li>
-		</ul>
-	</ui:define>
-</ui:composition>
-</html>
+	<ui:composition template="/layout.xhtml">
+		<ui:define name="title">#{msg['start.title']}</ui:define>
+		<ui:define name="content">
+			<ul>
+				<li><h:link value="#{msg.change}" outcome="/admin/index.xhtml" /></li>
+				<li><h:link value="#{msg.logout}" outcome="/logout.xhtml" /></li>
+				<li><h:link value="#{msg['image.title']}" outcome="/image.xhtml" /></li>
+				<li><h:link value="#{msg['greece.title']}" outcome="/greece.xhtml" /></li>
+			</ul>
+		</ui:define>
+	</ui:composition>
+</div>
