--- a/JEE6/FacesTest/WebContent/admin/index.xhtml
+++ b/JEE6/FacesTest/WebContent/admin/index.xhtml
@@ -1,4 +1,4 @@
-<div
+<div xmlns="http://www.w3.org/1999/xhtml"
 		xmlns:ui="http://java.sun.com/jsf/facelets"      
 		xmlns:f="http://java.sun.com/jsf/core"
 		xmlns:h="http://java.sun.com/jsf/html">
