* EMails können auch als ID geführt werden.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@315 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.dbauth/WebContent/user/authinfo.xhtml
+++ b/JEE6/de.itemis.jee6.dbauth/WebContent/user/authinfo.xhtml
@@ -43,14 +43,14 @@
 					<tr>
 						<td/>
 						<td>
-							<h:commandButton action="#{userHandler.saveAuthInfo}" value="#{userHandler.authInfo.id == 0 ? msg.create : msg.save}"/>
+							<h:commandButton action="#{userHandler.saveAuthInfo}" value="#{userHandler.authInfo.email == null ? msg.create : msg.save}"/>
 							<h:commandButton action="#{userHandler.backFromAuthInfo}" value="#{msg.back}"/>
 						</td>
 					</tr>
 
 
 
-			        <ui:fragment rendered="#{userHandler.authInfo.id != 0}">
+			        <ui:fragment rendered="#{userHandler.authInfo.email != null}">
 						<tr>
 							<td/>
 							<td>
