--- a/JEE6/FacesTest/WebContent/image.xhtml
+++ b/JEE6/FacesTest/WebContent/image.xhtml
@@ -6,7 +6,7 @@
 	<ui:composition template="/layout.xhtml">
 		<ui:define name="title">#{msg['start.title']}</ui:define>
 		<ui:define name="content">
-			<h:graphicImage value="/ImageServlet" />
+			<h:graphicImage value="/example.gif" />
 		</ui:define>
 	</ui:composition>
 </div>
